Closed
Bug 1367980
Opened 8 years ago
Closed 8 years ago
Don't release decoder immediately even we've finished decoding
Categories
(Firefox for Android Graveyard :: Audio/Video, defect)
Firefox for Android Graveyard
Audio/Video
Tracking
(firefox55 fixed)
RESOLVED
FIXED
Firefox 55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: alwu, Assigned: alwu)
References
Details
Attachments
(1 file)
On Android,mthe life cycle of graphic buffer is equal to Android's codec, and it would be released immediately if we shutdown the decoder.
Since the buffer has been release, the memory we access is totally meaningless. The result is we would render the black image on the screen.
STR.
1. go to https://people-mozilla.org/~alwu/mochitest/wemb.html
Expected.
2. The video is playing smoothly
Actual.
2. The video is flashing
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•8 years ago
|
||
| Assignee | ||
Updated•8 years ago
|
Attachment #8871630 -
Flags: review?(jwwang)
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8871630 [details]
Bug 1367980 - don't release decoder in complete state on Fennec.
https://reviewboard.mozilla.org/r/143132/#review147380
Attachment #8871630 -
Flags: review?(jwwang) → review+
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/04c6a723dddc
don't release decoder in complete state on Fennec. r=jwwang
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•