dom/media/MediaDecoderStateMachine.cpp
@@ -1906,9 +1906,12 @@ public:
 
   void Enter()
   {
+    // TODO : use more approriate way to decide whether need to release
+    // resource in bug1367983.
+#ifndef MOZ_WIDGET_ANDROID
     // We've decoded all samples. We don't need decoders anymore.
     Reader()->ReleaseResources();
-
+#endif
     bool hasNextFrame = (!mMaster->HasAudio() || !mMaster->mAudioCompleted)
                         && (!mMaster->HasVideo() || !mMaster->mVideoCompleted);
 
